log
Sun 16 Oct 2022 11:20:17 PM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:3: error: conversion to non-scalar type requested
   36 |   Heap * new = (Heap )malloc(sizeof(Heap));
      |   ^~~~
Compilation failed
4149231
Sun 16 Oct 2022 11:20:20 PM UTC: 
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:3: error: conversion to non-scalar type requested
   36 |   Heap * new = (Heap )malloc(sizeof(Heap));
      |   ^~~~
Compilation failed
be8a750
Sun 16 Oct 2022 11:20:21 PM UTC: 
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:3: error: conversion to non-scalar type requested
   36 |   Heap * new = (Heap )malloc(sizeof(Heap));
      |   ^~~~
Compilation failed
fda6d92
Sun 16 Oct 2022 11:20:36 PM UTC: 
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:3: error: conversion to non-scalar type requested
   36 |   Heap * new = (Heap )malloc(sizeof(Heap));
      |   ^~~~
Compilation failed
f98413f
